Bug 93698 - [BAT BYT regression] WARNING "Unclaimed register detected before reading register 0x186500"
Summary: [BAT BYT regression] WARNING "Unclaimed register detected before reading regi...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-13 13:29 UTC by Daniel Vetter
Modified: 2017-07-24 22:43 UTC (History)
2 users (show)

See Also:
i915 platform: BYT
i915 features: display/atomic


Attachments
kern-with-mmio_debug.log (271.76 KB, text/plain)
2016-03-09 18:13 UTC, cprigent
no flags Details
dmesg_with_i915.mmio_debug=10000.log (261.28 KB, text/plain)
2016-03-23 16:39 UTC, Humberto Israel Perez Rodriguez
no flags Details
dmesg_without_i915.mmio_debug=10000.log (68.03 KB, text/plain)
2016-03-23 16:39 UTC, Humberto Israel Perez Rodriguez
no flags Details

Description Daniel Vetter 2016-01-13 13:29:56 UTC
This happens while running igt@kms_flip@basic-flip-vs-wf_vblank

Looking at a few examples it seems to always be the same register and only ever this testcase. Affected machine is byt-nuc. Testcase itself succeeds, it's just the WARNING noise in dmesg

 	

[  262.864984] ------------[ cut here ]------------
[  262.865025] WARNING: CPU: 1 PID: 6799 at drivers/gpu/drm/i915/intel_uncore.c:638 __unclaimed_reg_debug+0x68/0x80 [i915]()
[  262.865029] Unclaimed register detected before reading register 0x186500
[  262.865032] Modules linked in: i915 intel_powerclamp coretemp crct10dif_pclmul crc32_pclmul lpc_ich i2c_hid i2c_designware_platform i2c_designware_core r8169 mii sdhci_acpi sdhci mmc_core [last unloaded: i915]
[  262.865057] CPU: 1 PID: 6799 Comm: kms_pipe_crc_ba Tainted: G     U  W       4.4.0-gfxbench+ #1
[  262.865060] Hardware name: \xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff \xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff\xffffffff/DN2820FYK, BIOS FYBYT10H.86A.0038.2014.0717.1455 07/17/2014
[  262.865064]  ffffffffa0338cf8 ffff88007448ba78 ffffffff813df90c ffff88007448bac0
[  262.865071]  ffff88007448bab0 ffffffff810746e1 0000000000186500 0000000000000001
[  262.865077]  0000000000000001 ffff880074420000 0000000000000000 ffff88007448bb10
[  262.865083] Call Trace:
[  262.865092]  [<ffffffff813df90c>] dump_stack+0x4e/0x82
[  262.865098]  [<ffffffff810746e1>] warn_slowpath_common+0x81/0xc0
[  262.865102]  [<ffffffff81074767>] warn_slowpath_fmt+0x47/0x50
[  262.865128]  [<ffffffffa02a07e8>] __unclaimed_reg_debug+0x68/0x80 [i915]
[  262.865154]  [<ffffffffa02a0e4e>] vlv_read32+0x2de/0x370 [i915]
[  262.865173]  [<ffffffffa0256837>] intel_set_memory_cxsr+0x87/0x1a0 [i915]
[  262.865200]  [<ffffffffa02c4cb3>] intel_pre_plane_update+0xb3/0xf0 [i915]
[  262.865228]  [<ffffffffa02c54b5>] intel_atomic_commit+0x3b5/0x17c0 [i915]
[  262.865234]  [<ffffffff8150dc45>] ? drm_atomic_check_only+0x145/0x660
[  262.865239]  [<ffffffff8150d75a>] ? drm_atomic_set_crtc_for_connector+0x6a/0xe0
[  262.865243]  [<ffffffff8150e192>] drm_atomic_commit+0x32/0x50
[  262.865249]  [<ffffffff814eb155>] drm_atomic_helper_set_config+0x75/0xb0
[  262.865253]  [<ffffffff814fd090>] drm_mode_set_config_internal+0x60/0x110
[  262.865258]  [<ffffffff81501e26>] drm_mode_setcrtc+0x186/0x4f0
[  262.865263]  [<ffffffff814f3eed>] drm_ioctl+0x13d/0x590
[  262.865267]  [<ffffffff81501ca0>] ? drm_mode_setplane+0x1b0/0x1b0
[  262.865273]  [<ffffffff811d4c4c>] do_vfs_ioctl+0x2fc/0x550
[  262.865278]  [<ffffffff8118d5ea>] ? vm_munmap+0x4a/0x60
[  262.865283]  [<ffffffff811e06ba>] ? __fget_light+0x6a/0x90
[  262.865287]  [<ffffffff811d4edc>] SyS_ioctl+0x3c/0x70
[  262.865292]  [<ffffffff8179a75b>] entry_SYSCALL_64_fastpath+0x16/0x73
[  262.865296] ---[ end trace 6387a0ad001bb39f ]---
Comment 1 Daniel Vetter 2016-01-13 13:31:05 UTC
Assigning to Mika since he last touched this self-check.
Comment 2 Daniel Vetter 2016-01-13 13:32:15 UTC
Argh, copypaste fail. The affected testcase is kms_pipe_crc_basic@nonblocking-crc-pipe-b Looking at long-term history in

/archive/results/CI_IGT_test/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-b.html

it seems to be a regression that started with CI_DRM_963
Comment 3 Mika Kuoppala 2016-01-13 14:32:20 UTC
This unclaimed has always been there, it is just that we enabled
the debugs for byt/bsw too, which brought this to surface.

If you look closely there is identical trace with bsw, but with
different testcase: igt@kms_pipe_crc_basic@read-crc-pipe-c-frame-sequence

I have verified that indeed the power wells are all off when
we set the memory_cxsr, from intel_pre_plane_update().

Ville knows about this and according to him this is a real
problem with atomic commit in how/where intel_pre_plane_update() is called.
Comment 4 Mika Kuoppala 2016-01-21 10:21:23 UTC
Patch pushed which removes the warning in byt/bsw if mmio_debug is not set.

Use i915.mmio_debug=10000 to reproduce.
Comment 5 Joshua 2016-01-22 19:14:57 UTC
http://url.dsl.pp.ua/875575/pils/page.php
Comment 6 Maarten Lankhorst 2016-02-03 15:55:24 UTC
Patch sent.

http://lists.freedesktop.org/archives/intel-gfx/2016-February/086986.html
Comment 7 Kimmo Nikkanen 2016-02-10 09:11:26 UTC
Assigning to QA for verification
Comment 8 cprigent 2016-03-09 18:13:03 UTC
Created attachment 122180 [details]
kern-with-mmio_debug.log

I don't see this warning when executing kms_pipe_crc_basic@nonblocking-crc-pipe-b.
But I also don't see it with kernel boot command line: i915.mmio_debug=10000
Do we need to track it?

Hardware 
Platform : Bay Trail M
CPU : Intel(R) Celeron(R) CPU  N2930  @ 1.83GHz (family: 6, model: 55 stepping: 8)
SoC : VLV C0
CRB : Bayley Bay Fab3 Rev 03
Bios: 100.21
Software
Linux distribution: Ubuntu 15.10 64 bits
Kernel drm-intel-nightly 4.5.0-rc7 from http://cgit.freedesktop.org/drm-intel/
drm: tag 2.4.67-5 ea07de9 from http://cgit.freedesktop.org/mesa/drm/
mesa: tag 11.1.2 7bcd827 from http://cgit.freedesktop.org/mesa/mesa/
cairo: tag 1.15.2 db8a7f1 from http://cgit.freedesktop.org/cairo
IGT: 1.14 174a06 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
Comment 9 Mika Kuoppala 2016-03-15 16:28:18 UTC
commit 2dfd178dc05164d6d730f4b3649accc1ee1ee585
Author: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Date:   Wed Feb 3 16:53:25 2016 +0100

    drm/i915: Do not disable cxsr when crtc is disabled.
Comment 10 Humberto Israel Perez Rodriguez 2016-03-23 16:38:41 UTC
with/ without i915.mmio_debug=10000 the warning message does not appears in dmesg


Hardware information
====================
Platform                         : BYT-M (Toshiba)
Motherboard model                : Satellite C55t-A
Motherboard type                 : Portable PC Notebook
Motherboard manufacturer         : TOSHIBA
CPU family                       : Atom
CPU information                  : Intel(R) Celeron(R) CPU  N2820  @ 2.13GHz
GPU Card                         : Intel Corporation Atom Processor Z36xxx/Z37xxx Series Graphics & Display (rev 0c) (prog-if 00 [VGA controller])
Memory ram                       : 4 GB


Software information
=====================
 --> Component : drm 
	 url : http://cgit.freedesktop.org/mesa/drm 
	 tag : libdrm-2.4.67-7-g49041c3 
	 commit : 49041c3 
	 author : Rob Clark <robclark@freedesktop.org> 
	 age : 4 weeks ago 
 --> Component : mesa 
	 url : http://cgit.freedesktop.org/mesa/mesa 
	 tag : mesa-11.1.2 
	 commit : 7bcd827 
	 author : Emil Velikov <emil.velikov@collabora.com> 
	 age : 6 weeks ago 
 --> Component : xf86-video-intel 
	 url : http://cgit.freedesktop.org/xorg/driver/xf86-video-intel 
	 tag : 2.99.917-579-g74cd4d0 
	 commit : 74cd4d0 
	 author : Chris Wilson <chris@chris-wilson.co.uk> 
	 age : 6 days ago 
 --> Component : libva 
	 url : http://cgit.freedesktop.org/libva/ 
	 tag : libva-1.7.0-1-g2339d10 
	 commit : 2339d10 
	 author : Xiang Haihao <haihao.xiang@intel.com> 
	 age : 6 days ago 
 --> Component : vaapi (intel-driver) 
	 url : http://cgit.freedesktop.org/vaapi/intel-driver 
	 tag : 1.7.0-5-g759e44d 
	 commit : 759e44d 
	 author : peng.chen <peng.c.chen@intel.com> 
	 age : 7 days ago 
 --> Component : cairo 
	 url : http://cgit.freedesktop.org/cairo 
	 tag : 1.15.2 
	 commit : db8a7f1 
	 author : Bryce Harrington <bryce@osg.samsung.com> 
	 age : 3 months ago 
 --> Component : xserver 
	 url :  http://cgit.freedesktop.org/xorg/xserver 
	 tag : xorg-server-1.18.0-247-ga288cf5 
	 commit : a288cf5 
	 author : Dave Airlie <airlied@redhat.com> 
	 age : 7 days ago 
 --> Component : intel-gpu-tools 
	 url : http://cgit.freedesktop.org/xorg/app/intel-gpu-tools 
	 tag : intel-gpu-tools-1.14-115-g7fc5256 
	 commit : 7fc5256 
	 author : Lionel Landwerlin <lionel.g.landwerlin@intel.com> 
	 age : 4 days ago 


kernel information
===================
Branch = drm-intel-nightly
commit 4b39223f6e3bef4dfa678f7239dcd87c38e20e96
Author: Matt Roper <matthew.d.roper@intel.com>
Date:   Mon Mar 21 11:44:01 2016 -0700

    drm-intel-nightly: 2016y-03m-21d-18h-43m-18s UTC integration manifest


Attachments
================
dmesg_with_i915.mmio_debug=10000.log
dmesg_without_i915.mmio_debug=10000.log
Comment 11 Humberto Israel Perez Rodriguez 2016-03-23 16:39:00 UTC
Created attachment 122499 [details]
dmesg_with_i915.mmio_debug=10000.log
Comment 12 Humberto Israel Perez Rodriguez 2016-03-23 16:39:16 UTC
Created attachment 122500 [details]
dmesg_without_i915.mmio_debug=10000.log


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.